--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "ComapnyApp",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "license": "MIT",
   "scripts": {
+    "test": "mocha --watch \"./{,!(node_modules)/**/}*.test.js\"",
     "start": "nodemon server.js"
   },
   "dependencies": {
+    "chai": "4.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mocha": "6.2.1",
     "mongodb": "3.3.2",
     "mongoose": "5.7.1",
     "nodemon": "^1.19.1"
