--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "ComapnyApp",
+  "name": "CompanyApp",
   "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "test": "mocha --watch \"./{,!(node_modules)/**/}*.test.js\"",
+    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\" --timeout 3000",
+    "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test",
     "start": "nodemon server.js"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "mocha": "6.2.1",
     "mongodb": "3.3.2",
     "mongoose": "5.7.1",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "onchange": "6.1.0"
   }
 }
