Add test to endpoints

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "main": "server.js",
   "license": "MIT",
   "scripts": {
-    "test": "mocha \"./{,!(node_modules)/**/}*.test.js\" --timeout 3000",
+    "test": "set NODE_ENV=test&& mocha \"./{,!(node_modules|client)/**/}*.test.js\" ----timeout 3000",
     "test:watch": "onchange \"./**/*.js\" -i -k -- yarn test",
     "start": "nodemon server.js"
   },
   "dependencies": {
     "chai": "4.2.0",
+    "chai-http": "4.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mocha": "6.2.1",
